add easy datavis talk

--- a/talks.html
+++ b/talks.html
@@ -37,15 +37,18 @@
 </nav>
         <main>
             <h1>Talks and Presentations</h1>
+            
+            <iframe width="640" height="480" src="https://www.swipe.to/embed/0670fg" allowfullscreen></iframe>
+            <p>Presented at ConnectJS in October 2015.</p>
 
             <script async class="speakerdeck-embed" data-id="96750e406d1a0132c7933237dc438ac1" data-ratio="1.29456384323641" src="//speakerdeck.com/assets/embed.js"></script>
-            <p>Presented at DevNexus in March 2015. Interactive version of the presentation on <a href="http://jsdatav.is/talks/intro-to-d3/">jsDataV.is</a>.</p>
+            <p>Presented at DevNexus in March 2015. Interactive version of the presentation on <a href="http://jsdatav.is/talks/intro-to-d3/">jsDataV.is</a> and video of the presentation available on <a href="https://dzone.com/videos/devnexus2015/visualizing-data-d3js?ref=dzone">DZone</a>.</p>
 
             <script async class="speakerdeck-embed" data-id="2033610035fb0132343b52ef75abd035" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-            <p>Presented at ConnectJS in October 2014. Video of the presentation to be available (eventually) on <a href="https://www.youtube.com/user/connectconfs">YouTube</a>.</p>
+            <p>Presented at ConnectJS in October 2014. Video of the presentation vailable on <a href="https://www.youtube.com/watch?v=_Qiv28kC7jc&list=PLxhaQmHNqtY3iGUtTSm4EjM01NePAdUjM&index=5">YouTube</a>.</p>
 
             <script async class="speakerdeck-embed" data-id="cfc36460376a0132de2556fa10644643" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-            <p>Presented at ConnectJS in October 2014. Video of the presentation to be available (eventually) on <a href="https://www.youtube.com/user/connectconfs">YouTube</a>.</p>
+            <p>Presented at ConnectJS in October 2014. Video of the presentation available on <a href="https://www.youtube.com/watch?v=gbS8SLPWloo&list=PLxhaQmHNqtY3iGUtTSm4EjM01NePAdUjM&index=4">YouTube</a>.</p>
 
             <script async class="speakerdeck-embed" data-id="ec4e0eb0740b013147f52620968fb247" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
             <p>Presented at DevNexus in March 2014. Video of the presentation available on <a href="http://www.infoq.com/presentations/tdd-javascript">InfoQ</a>.</p>
