--- a/visuals.html
+++ b/visuals.html
@@ -13,6 +13,8 @@
         <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/styles.visuals.min.css">
+        <link rel="alternate" type="application/rss+xml" 
+              title="RSS Feed for jsDataV.is" href="/rss.xml" />
         <title>jsDataV.is - Visualizations</title>
     </head>
     <body>
