--- a/talks.html
+++ b/talks.html
@@ -37,7 +37,10 @@
 </nav>
         <main>
             <h1>Talks and Presentations</h1>
-            
+
+            <iframe width="640" height="480" src="https://www.swipe.to/embed/6816cp" allowfullscreen></iframe>
+            <p>Presented at ConnectJS in October 2015.</p>
+
             <iframe width="640" height="480" src="https://www.swipe.to/embed/0670fg" allowfullscreen></iframe>
             <p>Presented at ConnectJS in October 2015.</p>
 
